# HelloWorlds

./: .clang-tidy  .gitignore  BuildPhysX.cmake  CMakeLists.txt  Readme.md  ResourceEmbed.cmake  package.xml
.github/: .clang-tidy  run_clang_tidy.py
.github/workflows/: ROS2.yml  Standalone.yml
assets/: bench.mtl  eve.urdf
assets/Adream/: adream.urdf  appartment.mtl  walls.mtl
assets/Adream/windows/: window.mtl
assets/Frame/: frame.urdf  frames.dae  frames.mtl
examples/: light_demo.cpp  physics_demo.cpp
include/: hws_stb_image.h
include/hello_worlds/: Engine.h
include/hello_worlds/Common/: World.h  WorldTypes.h
include/hello_worlds/Common/Camera/: Camera.h  CameraProjection.h  CameraUpdater.h  CameraView.h  ViewAntiAliasing.h  VirtualCamera.h
include/hello_worlds/Common/Debug/: DebugLine.h  DebugText.h
include/hello_worlds/Common/Lights/: AmbientLight.h  PointLights.h
include/hello_worlds/Common/Models/: Color.h  Material.h  Mesh.h  Model.h  ModelManager.h  RawModel.h  Vertex.h
include/hello_worlds/Common/Models/Loaders/: ColladaLoader.h  ModelLoader.h  ObjLoader.h  StlLoader.h  TinyObjReader.h
include/hello_worlds/Common/Shapes/: Shape.h  ShapeBox.h  ShapeCapsule.h  ShapeCustomMesh.h  ShapeCylinder.h  ShapeDummy.h  ShapeSkybox.h  ShapeSphere.h
include/hello_worlds/Common/Urdf/: Actor.h  Joint.h  JointLocation.h  Urdf.h  UrdfLoader.h  VisualActor.h
include/hello_worlds/Graphics/Common/: InstanceData.h  WindowPlatformData.h
include/hello_worlds/Graphics/GLFW/: Window.h
include/hello_worlds/Graphics/OpenGL/: AmbientShadow.h  Cubemap.h  LinesHandle.h  MeshHandle.h  OffScreen.h  PointShadow.h  Renderer.h  Screen.h  Shader.h  TextRenderer.h  Texture2D.h
include/hello_worlds/Graphics/OpenGL/Shaders/: DefaultShader.h  ModelShader.h  Shader.h
include/hello_worlds/Physics/PhysX/: API.h  Context.h  Joint.h  SharedContext.h  Urdf.h  World.h
include/hello_worlds/Physics/PhysX/Actors/: Actor.h  DynamicActor.h  LinkActor.h  StaticActor.h
include/hello_worlds/Utils/: AssetResolver.h  BitCast.h  CircularBuffer.h  GlmMath.h  KeypressHandler.h  Ontology.h  Parameters.h  RosPackage.h  ShellDisplay.h  SolarAzEl.h  String.h  Wavefront.h  XmlTokenize.h  YamlReader.h
shaders/: color_shader.vs  depth_prepass.fs  depth_prepass.vs  depth_shader.fs  depth_shader.gs  depth_shader.vs  depthcube_shader.fs  depthcube_shader.gs  light_shader.fs  screen_shader.fs  screen_shader.vs  sky_shader.fs  sky_shader.vs  text_shader.fs  text_shader.vs
src/: Engine.cpp
src/Common/: World.cpp
src/Common/Camera/: Camera.cpp  CameraUpdater.cpp  VirtualCamera.cpp
src/Common/Debug/: DebugLine.cpp
src/Common/Lights/: AmbientLight.cpp  PointLights.cpp
src/Common/Models/: Mesh.cpp  Model.cpp  ModelManager.cpp
src/Common/Models/Loaders/: ColladaLoader.cpp  ModelLoader.cpp  ObjLoader.cpp  StlLoader.cpp  TinyObjReader.cpp
src/Common/Urdf/: Actor.cpp  Joint.cpp  Urdf.cpp  UrdfLoader.cpp  VisualActor.cpp
src/Graphics/GLFW/: Window.cpp
src/Graphics/OpenGL/: AmbientShadow.cpp  Cubemap.cpp  LinesHandle.cpp  MeshHandle.cpp  OffScreen.cpp  PointShadow.cpp  Renderer.cpp  Screen.cpp  Shader.cpp  TextRenderer.cpp  Texture2D.cpp
src/Graphics/OpenGL/Shaders/: DefaultShader.cpp  ModelShader.cpp  Shader.cpp
src/Physics/PhysX/: Context.cpp  Joint.cpp  SharedContext.cpp  Urdf.cpp  World.cpp
src/Physics/PhysX/Actors/: Actor.cpp  DynamicActor.cpp  LinkActor.cpp  StaticActor.cpp
src/Utils/: AssetResolver.cpp  RosPackage.cpp  SolarAzEl.cpp  Wavefront.cpp  XmlTokenize.cpp  YamlReader.cpp
tests/: AssetResolverTest.cpp  CameraUpdaterTest.cpp  ModelLoaderTest.cpp  ModelManagerTest.cpp  UrdfLoaderTest.cpp  resource_embedding.cpp  test_config.h.in
tests/Integration/ROS2/: deploy.sh  ros2_CMakeLists.txt  ros2_package.xml
tests/Integration/Standalone/: consumer_test.cpp  standalone_CMakeLists.txt
